--- a/public/css/willbes/style_gosi_acad.css
+++ b/public/css/willbes/style_gosi_acad.css
@@ -119,7 +119,56 @@
 
 /* Main Container : Notice : noticeTabs */
 .GA .noticeTabs.acad {
-    float: right;
-    width: 698px;
+    float: left;
+    width: 668px;
     margin-top: 27px;
+}
+
+/* Main Container : pick : nSlider : gosi */
+.GA .sliderEvt {
+    float: right;
+    width: 420px;
+}
+
+
+/* Main Container : acad_infoBox : gosi Acad */
+.GA .acad_infoBox li a.on,
+.GA .acad_infoBox li a:hover {
+    color: #ba560e;
+}
+.GA .acad_infoBox li.w-infoBox1 a {
+    background: url("../../img/willbes/gosi_acad/icon_info1.png") no-repeat 30px center;
+}
+.GA .acad_infoBox li.w-infoBox2 a {
+    background: url("../../img/willbes/gosi_acad/icon_info2.png") no-repeat 30px center;
+}
+.GA .acad_infoBox li.w-infoBox3 a {
+    background: url("../../img/willbes/gosi_acad/icon_info3.png") no-repeat 30px center;
+}
+.GA .acad_infoBox li.w-infoBox4 a {
+    background: url("../../img/willbes/gosi_acad/icon_info4.png") no-repeat 30px center;
+}
+.GA .acad_infoBox li.w-infoBox5 a {
+    background: url("../../img/willbes/gosi_acad/icon_info5.png") no-repeat 30px center;
+}
+
+.GA .acad_infoBox li.w-infoBox1 a.on,
+.GA .acad_infoBox li.w-infoBox1 a:hover {
+    background: url("../../img/willbes/gosi_acad/icon_info1_on.png") no-repeat 30px center;
+}
+.GA .acad_infoBox li.w-infoBox2 a.on,
+.GA .acad_infoBox li.w-infoBox2 a:hover {
+    background: url("../../img/willbes/gosi_acad/icon_info2_on.png") no-repeat 30px center;
+}
+.GA .acad_infoBox li.w-infoBox3 a.on,
+.GA .acad_infoBox li.w-infoBox3 a:hover {
+    background: url("../../img/willbes/gosi_acad/icon_info3_on.png") no-repeat 30px center;
+}
+.GA .acad_infoBox li.w-infoBox4 a.on,
+.GA .acad_infoBox li.w-infoBox4 a:hover {
+    background: url("../../img/willbes/gosi_acad/icon_info4_on.png") no-repeat 30px center;
+}
+.GA .acad_infoBox li.w-infoBox5 a.on,
+.GA .acad_infoBox li.w-infoBox5 a:hover {
+    background: url("../../img/willbes/gosi_acad/icon_info5_on.png") no-repeat 30px center;
 }
