--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -137,6 +137,15 @@ body {
     line-height: 30px !important;
 }
 
+.tx-dark-blue,
+.cop-color {
+    color: #0c5dc0;
+}
+.tx-bright-brown,
+.gosi-color {
+    color: #ba560e;
+}
+
 input {
     color: #333;
     border: 1px solid #d4d4d4;
@@ -389,6 +398,43 @@ body.memBody #Footer {
 }
 .mem-Login .chkBox ul li .labelSave {
     padding-left: 10px;
+}
+
+
+
+/*********************************************     INTRO PAGE     *********************************************/
+.introBox {
+    margin: 5%;
+    border: 1px solid #000;
+    color: #363636;
+    text-align: center;
+}
+.introBox img {
+    width: 100%; 
+}
+.introBox img a {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+.introBox .Tit {
+    font-size: 36px;
+    line-height: 60px;
+    padding-bottom: 15px;
+}
+.introBox .subTit {
+    font-size: 14px;
+    padding-top: 30px;
+}
+.introBox .btnGo {
+    padding-bottom: 30px;
+}
+.introBox .btnGo span {
+    display: inline-block;
+    font-size: 14px;
+    border: 1px solid #000;
+    border-radius: 5px;
+    padding: 8px 30px;
 }
 
 
