모바일 수강대기페이지 수정

--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -1285,6 +1285,7 @@ body.memBody #Footer {
     font-size: 12px;
     text-align: center;
     line-height: 32px;
+    letter-spacing: -1px;
 }
 .lecTable .w-start ul.one {
     width: 25%;
