--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -2710,6 +2710,29 @@ table.lecWrapTable .lecInfoTable .w-sub .w-subtit {
     z-index: 10;  
 }
 
+.w-sp100 {
+    width: 100%;
+    margin: 0 26px 10px;
+}
+.w-sp100 div {
+    margin-top: 5px;
+} 
+.w-sp100 input {    
+    width: 100px;
+    font-size: 12px;
+    padding: 5px;
+    border: 1px solid #d4d4d4;
+}
+.w-sp100 button {
+    background: #0e79af;
+    width: 50px;
+    padding: 5px;
+    margin: 0;
+}
+.w-sp100 button span {
+    font-size: 12px;
+}
+
 /* subContainer : Content : viewBox */
 .viewBox {
     display: none;
