내강의실 메인 수정

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -7144,7 +7144,7 @@ ul li.profList .willbes-Layer-ProfileBox {
     float: right;
     width: 285px;
     height: 245px;
-    margin-top: 30px;
+    margin-top: 0;
 }
 .MyInfoBoxList .will-Tit {
     background: #fff;
