게시판 글보기 이미지 크키 최대 900px 그 이하는 원래 크기대로 나옴

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -3723,7 +3723,7 @@ form .LeclistTable .evtTable tr td a.w-del {
     vertical-align: baseline;
 }
 .LecViewTable .w-txt img { 
-    max-width:900px;
+    max-width:900px !important;
 }
 .LecViewTable .w-txt .scrollBox {
     padding: 15px 25px;
