교수 상세보기 배너 롤링으로 변경

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -5443,7 +5443,8 @@ table.finTable .row-line {
 /* subContainer : Prof : willbes-NoticeWrap */
 .willbes-NoticeWrap {
     float: left;
-    width: 100%;    
+    width: 100%;
+    padding-bottom:20px;
 }
 .willbes-NoticeWrap:after {
     content: '';
@@ -5705,12 +5706,30 @@ ul li.profList .willbes-Layer-ProfileBox {
 .willbes-Prof-Profile .prof-banner01 li:first-child {
     background: url("../../img/willbes/prof/viewSample02_bg.jpg") no-repeat 0 0;
     width: 370px;
-    height: 206px;
-    margin-right: 14px;
+    height: 206px;    
 }
 .willbes-Prof-Profile .prof-banner01 li iframe {
     width: 370px;
     height: 206px;
+}
+.willbes-Prof-Profile .prof-banner01 li:last-child {
+    float: right;
+    position: relative;
+    width: 188px;
+    height: 206px;
+    overflow: hidden;
+}
+.willbes-Prof-Profile .prof-banner01:after {
+    content: '';
+    display: block;
+    clear: both;
+} 
+
+.willbes-Prof-Profile .prof-banner02 {
+    clear: both;
+    overflow: hidden;
+    width: 940px;
+    height: 90px;
 }
 
 .willbes-Prof-Profile .sliderBest {
@@ -5718,7 +5737,8 @@ ul li.profList .willbes-Layer-ProfileBox {
     top: 360px;
     left: 0;
     width: 576px;
-    height: 120px;
+    height: 90px;
+    overflow: hidden;
 }
 
 /* subContainer : Prof : willbes-Layer-ProfileBox */
