경찰 온라인 최상단 배너 수정

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -650,7 +650,7 @@ table.auTable tr td {
     border-right: 1px solid #aeaeae;
     color: #383838;
     letter-spacing: -1px;
-    z-index: 102;
+    z-index: 999;
 }
 #Gnb .toggle-Btn {
     position: absolute;
@@ -5701,19 +5701,19 @@ ul li.profList .willbes-Layer-ProfileBox {
 }
 .willbes-Prof-Profile .prof-banner01 li {
     display: inline;
-    float: left;
+    float: left;    
 }
 .willbes-Prof-Profile .prof-banner01 li:first-child {
     background: url("../../img/willbes/prof/viewSample02_bg.jpg") no-repeat 0 0;
     width: 370px;
-    height: 206px;    
+    height: 206px;  
+    margin-right:14px;  
 }
 .willbes-Prof-Profile .prof-banner01 li iframe {
     width: 370px;
     height: 206px;
 }
 .willbes-Prof-Profile .prof-banner01 li:last-child {
-    float: right;
     position: relative;
     width: 188px;
     height: 206px;
