--- a/public/css/willbes/style_cop.css
+++ b/public/css/willbes/style_cop.css
@@ -2,13 +2,12 @@
 /* Main Container : Cop */
 
 /* top bar banner */
-.topBannerOne { background:#e7e7e7; width:100%; text-align:center} 	
-	.topBanner {display:block; background:#e7e7e7; width:100%; text-align:center}
-	.topBanner p {width:100%; max-width:1120px; margin:0 auto}
-	.topBanner p img {width:100%}
+.topBanner {display:block; background:#0c5dc0; width:100%; text-align:center}
+.topBanner p {width:100%; max-width:1120px; margin:0 auto}
+.topBanner p img {width:100%}
 	
-	#topBannerWarp { position:absolute; top:70px; width:100%; min-width:1210px; background:url("../../img/willbes/cop/banner/onTopBnar_190123C_02_bg.jpg") no-repeat center top; z-index:102}
-		.myToggle {width:1120px; height:732px ;margin:0 auto}
+#topBannerWarp {position:absolute; top:80px; width:100%; min-width:1210px; background:url("../../img/willbes/cop/banner/onTopBnar_190123C_02_bg.jpg") no-repeat center top; z-index:102}
+	.myToggle {width:1120px; height:732px ;margin:0 auto}
 
 
 .cop .tx-color {
@@ -19,7 +18,7 @@
 }
 .cop .Menu .menu-List li.Acad a {
     background: url("../../img/willbes/sub/icon_acad.gif") no-repeat 0 0;
-    color: #2784d2;
+    color: #0c5dc0;
 }
 .cop .Menu .menu-List li.Acad a .arrow-Btn {
     background: url("../../img/willbes/sub/icon_arrow.gif") no-repeat 0 0;
@@ -31,10 +30,99 @@
     background: #f7f7f7;
 }
 
+/* subContainer : Content : 2nd Tabs 공통 */
+.tabWrap {
+    height: 34px;
+    border-bottom: 1px solid #959595;
+}
+.tabWrap li {
+    float: left;
+    width: 140px;
+    height: 34px;
+}
+.tabWrap li a {
+    display: block;
+    width: 100%;
+    height: 33px;
+    line-height: 32px;
+    background: #f9f9f9;
+    font-size: 12px;
+    color: #959595;
+    text-align: center;
+    letter-spacing: 0;
+    border-top: 1px solid #e1e1e1;
+    border-right: 1px solid #e1e1e1;
+}
+.tabWrap li:first-child a {
+    border-left: 1px solid #e1e1e1;
+} 
+.tabWrap li a.on {
+    position: relative;
+    z-index: 2;
+    background: #fff;
+    height: 34px;
+    line-height: 32px;
+    font-weight: 600;
+    color: #686868;
+    border-top: 1px solid #959595;
+    border-left: 1px solid #959595;
+    border-right: 1px solid #959595;
+}
+.tabBox .book-TxtBox {
+    height: 150px;
+    line-height: 24px;
+    padding: 15px 0 15px 5px;
+    border-bottom: 1px solid #edeeef;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+.tabBox .caution-txt {
+    padding: 15px 20px;
+    margin-left: 5px;
+}
+
+.tabShow {
+    height: 34px;
+    border-bottom: 1px solid #959595;
+}
+.tabShow li {
+    float: left;
+    width: 140px;
+    height: 34px;
+}
+.tabShow li a {
+    display: block;
+    width: 100%;
+    height: 33px;
+    line-height: 32px;
+    background: #f9f9f9;
+    font-size: 12px;
+    color: #959595;
+    text-align: center;
+    letter-spacing: 0;
+    border-top: 1px solid #e1e1e1;
+    border-right: 1px solid #e1e1e1;
+}
+.tabShow li:first-child a {
+    border-left: 1px solid #e1e1e1;
+} 
+.tabShow li a.on {
+    position: relative;
+    z-index: 2;
+    background: #fff;
+    height: 34px;
+    line-height: 32px;
+    font-weight: 600;
+    color: #686868;
+    border-top: 1px solid #959595;
+    border-left: 1px solid #959595;
+    border-right: 1px solid #959595;
+}
+
 /* Main Container : QuickMenu : Cop */
 .MainQuickMenu {
     position: fixed;
-    top: 80px;
+    top: 90px;
     right: 20px;
     width: 100px;
     height: auto;
@@ -103,6 +191,65 @@
 }
 
 /* Main Container : Tit : Cop */
+.Section.MainVisual .widthAuto {
+    position: relative;
+}
+.Section.MainVisual iframe {
+    position: absolute;    
+    width: 270px;
+    height: 152px;
+    top: 72px;
+    right: 0;
+    z-index: 100;
+}
+.youtubeWrap {    
+    height:530px;
+    padding:0 0 80px;
+}
+.youtubetabWrap {
+    float: right;
+    background: url("../../img/willbes/cop/visual/youtubetab_bg.png") no-repeat 0 0;
+    width: 549px;
+    height: 339px;
+}
+.youtubetabWrap ul {
+    padding:20px 40px 40px 80px;
+}
+.youtubetab li {
+    display: blcok;
+    border-bottom:1px solid #e2e2e2;
+}
+.youtubetab li:last-child {
+    border:0;
+}
+.youtubetab li a {
+    display: block;
+    padding:15px 0;
+    font-size: 16px;
+    line-height: 1.4;
+}
+.youtubetab li a span {
+    display: block;
+    font-size: 13px;
+}
+.youtubetab li a.active,
+.youtubetab li a:hover {
+    color: #0c5dc0;
+}
+.youtubeBox {
+    float: left;
+    margin-top:10px;
+    background: #000;
+    width: 560px;
+    height: 315px;
+    overflow: hidden;
+}
+.youtubeBox iframe {
+    width: 560px;
+    height: 315px;
+}
+
+
 .Section .will-big-Tit {
     text-align: center;
 }
@@ -191,7 +338,7 @@
 .newTopDday #ddaytime ul:after {content:""; display:block; clear:both}
 
 /* Main Container : flipped : Cop */
-.Flipped {background: url("../../img/willbes/cop/flipped/flipped_bg.jpg") repeat-x center 90px; padding-bottom: 90px;}
+.Flipped {background: url("../../img/willbes/cop/flipped/flipped_bg.jpg") repeat-x center 90px; background-size: 100%; padding-bottom: 90px;}
 .Flipped ul.inner {height:370px}
 .Flipped ul.inner li {position: relative; float:left; width:280px; height:100%; margin-left:20px}
 .Flipped ul.inner li:first-child {width:520px; margin-left:0}
